# easy_http_server

./: CMakeLists.txt
include/: TCPConn.hpp  TCPServer.hpp  html_parser.hpp  jinger.hpp  server_worker.hpp
src/: TCPConn.cpp  TCPServer.cpp  html_parser.cpp  jinger.cpp  main.cpp  main_jinger.cpp
